# Ecom-QABot

./: .gitignore  Dockerfile  README.md  chunking.ipynb  docker-compose.yaml  pyproject.toml  test.py
app-ecom-bot/: retrieval-eval.py
data/: aegCqst.docx  aegon_conquest_chunked.json  chunked_data.csv  chunking.ipynb  documents-with-ids.json  embeddings.ipynb  ground-truth-retrieval.csv  indexing.ipynb  rag-eval-gpt-4o-mini.csv  rag-pipeline.ipynb  retrieval-eval.ipynb
ecom-bot/: rag-pipeline.py
notebooks/: retrieval-eval.ipynb
src/: helper.py
src/ecom_bot/: app.py  db.py  db_prep.py  ingest.py  rag-pipeline.py  rag.py
