[tool.poetry]
name = "none"
version = "0.1.0"
description = ""
authors = ["Zaahir Dawood <zaahirdawood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
jupyter = "^1.1.1"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
elasticsearch = "^8.15.1"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
