[tool.poetry]
name = "none"
version = "0.1.0"
description = ""
authors = ["Zaahir Dawood <zaahirdawood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
jupyter = "^1.1.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
elasticsearch = "^8.15.1"
sentence-transformers = "^3.0.1"
openai = "^1.45.0"
hyperopt = "^0.2.7"
flask = "^3.0.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
