[tool.poetry]
name = "ecom-qabot"
version = "0.1.0"
description = ""
authors = ["Zaahir Dawood <zaahirdawood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.51.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
flask = "^3.0.3"
scikit-learn = "^1.5.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
